--- a/helm/templates/deployment.yml
+++ b/helm/templates/deployment.yml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: joindevops/backend: {{ .Values.deployment.imageVersion }}
+        image: 211125718262.dkr.ecr.us-east-1.amazonaws.com/expense-backend:{{ .Values.deployment.imageVersion }}
         envFrom:
         - configMapRef:
            name: backend
